# scripts/api.yml
@@ -15,8 +15,6 @@ tags:
     description: Results users with their answers
   - name: questions
     description: List questions
-  - name: correct
-    description: List right answers
     
 
 
@@ -93,7 +91,6 @@ paths:
         '500':
           $ref: '#/components/responses/ErrorUnexpected'
 
-  # Results information page
   /questions:
     get:
       description: List Questions
@@ -111,15 +108,14 @@ paths:
         '500':
           $ref: '#/components/responses/ErrorUnexpected'
 
-  # Results information page
-  /correct:
+  /questions/correct:
     get:
-      description: List right Answers
+      description: List correct Answers
       operationId: correct
-      tags: ['correct']
+      tags: ['questions']
       responses:
         '200':
-          $ref: '#/components/responses/RightAnswersResponse'
+          $ref: '#/components/responses/CorrectAnswersResponse'
         '400':
           $ref: '#/components/responses/ErrorBadRequest'
         '403':
@@ -195,13 +191,13 @@ components:
         users:
           type: array
           items:
-            $ref: '#/components/schemas/UserRes'
+            $ref: '#/components/schemas/UserResult'
         count:
           type: integer 
           description: Total count of users
           readOnly: true
 
-    UserRes:
+    UserResult:
       type: object
       properties:
           user:
@@ -215,10 +211,8 @@ components:
             type: array
             items:
               $ref: '#/components/schemas/Answer'
-    
 
-
-    QuestionsRes:
+    QuestionsItems:
       description: List of questions
       properties:
         Questions:
@@ -229,8 +223,13 @@ components:
     Questions:
       type: object
       description: list of questions with answers
+      required:
+      - id
+      - code
+      - question
+      - answers
       properties:
-        id:     
+        order_number:     
           type: integer
           description: Question number
         code:     
@@ -245,13 +244,33 @@ components:
           items:
             type: string
 
-    RightAnswersRes:
-      description: list of right answers
+    CorrectAnswers:
+      description: list of correct answers
+      required:
+      - CorrectAnswers
       properties:
-        correct:
+        CorrectAnswers:
           type: array
           items:
-            $ref: '#/components/schemas/Answer'  
+            $ref: '#/components/schemas/CorrectAnswer'  
+
+    CorrectAnswer:
+      type: object
+      description: The object describes the user response
+      required:
+      - id
+      - answers
+      properties:
+        id:     
+          type: integer
+          description: Question number
+        answers:
+          type: array
+          items:
+            type: integer
+            description: Answer to the question on this number    
+
+
 
     Answers:
       type: object
@@ -282,6 +301,9 @@ components:
         answer:
           type: integer
           description: Answer to the question on this number
+
+
+
 
   # responses
   responses:
@@ -315,15 +337,15 @@ components:
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/QuestionsRes'
+            $ref: '#/components/schemas/QuestionsItems'
 
-    # Right answers
-    RightAnswersResponse:
-      description: Right Answers
+    # Correct answers 
+    CorrectAnswersResponse:
+      description: Correct Answers
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/RightAnswersRes'
+            $ref: '#/components/schemas/CorrectAnswers'
 
     # error responses            
     ErrorUnexpected:
