# src/services/api/models/RightAnswersRes.ts
@@ -1,64 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * Pretendent backend
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: 0.1.3
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { exists, mapValues } from '../runtime';
-import {
-    Answer,
-    AnswerFromJSON,
-    AnswerFromJSONTyped,
-    AnswerToJSON,
-} from './';
-
-/**
- * list of right answers
- * @export
- * @interface RightAnswersRes
- */
-export interface RightAnswersRes {
-    /**
-     * 
-     * @type {Array<Answer>}
-     * @memberof RightAnswersRes
-     */
-    correct?: Array<Answer>;
-}
-
-export function RightAnswersResFromJSON(json: any): RightAnswersRes {
-    return RightAnswersResFromJSONTyped(json, false);
-}
-
-export function RightAnswersResFromJSONTyped(json: any, ignoreDiscriminator: boolean): RightAnswersRes {
-    if ((json === undefined) || (json === null)) {
-        return json;
-    }
-    return {
-        
-        'correct': (json as Array<any>).map(AnswerFromJSON),
-    };
-}
-
-export function RightAnswersResToJSON(value?: RightAnswersRes | null): any {
-    if (value === undefined) {
-        return undefined;
-    }
-    if (value === null) {
-        return null;
-    }
-    return {
-        
-        'correct': value.correct === undefined ? undefined : ((value.correct as Array<any>).map(AnswerToJSON)),
-    };
-}
-
-
