# src/services/api/models/index.ts
@@ -1,9 +1,10 @@
 export * from './Answer'
 export * from './Answers'
+export * from './CorrectAnswer'
+export * from './CorrectAnswers'
 export * from './Message'
 export * from './Questions'
-export * from './QuestionsRes'
+export * from './QuestionsItems'
 export * from './Results'
-export * from './RightAnswersRes'
 export * from './User'
-export * from './UserRes'
+export * from './UserResult'
